syntax = "proto3";

option go_package = "./pb/generated;pb";
import "google/protobuf/empty.proto";

service UserAccountService {
    //Login
    rpc UserLoginGetOTP(UserLoginGetOTPRequest) returns (UserLoginGetOTPResponse);   //done
    rpc UserLoginVerifyOTP(UserLoginVerifyOTPRequest) returns (UserLoginResponse);    //done
    rpc UserLoginViaPassword(UserLoginViaPasswordRequest) returns (UserLoginResponse);    //done

    //Sign up
    rpc UserSignUpGetOTP(UserSignUpGetOTPRequest) returns (UserSignUpGetOTPResponse);  //done
    rpc UserSignUpVerifyOTP(UserSignUpVerifyOTPRequest) returns (UserSignUpVerifyOTPResponse);   //done
    rpc SignedUpUserSettingPw(SignedUpUserSettingPwRequest) returns (SignedUpUserSettingPwResponse);    //done

    //profile
    rpc UserGetProfile(UserGetProfileRequest) returns (UserGetProfileResponse);    //done
    rpc UserUpdateProfile(UserUpdateProfileRequest) returns (google.protobuf.Empty);    //done
    rpc UserUpdatePasswordUsingOldPw(UserUpdatePasswordUsingOldPwRequest) returns (google.protobuf.Empty);    //done
    
    //Password reset
    rpc UserGetOTPForPwChange(UserGetOTPForPwChangeRequest) returns (UserGetOTPForPwChangeResponse);    //done
    rpc UserVerifyOTPForPwChange(UserVerifyOTPForPwChangeRequest) returns (UserVerifyOTPForPwChangeResponse);   //done
    rpc UserSetNewPwAfterVerifyingOTP(UserSetNewPwAfterVerifyingOTPRequest) returns (google.protobuf.Empty);    //done

}

message UserSetNewPwAfterVerifyingOTPRequest {
    int32 userId = 1;
    string newPassword = 2;
}

message UserUpdatePasswordUsingOldPwRequest {
    int32 userId = 1;
    string oldPassword = 2;
    string newPassword = 3;
}

message UserGetProfileRequest {
    int32 userId = 1;
}

message UserGetProfileResponse {
    string firstName = 1;
    string lastName = 2;
    string email = 3;
    string address = 4;
    string pincode = 5;
    string phoneNumber = 6;
}

message UserLoginViaPasswordRequest {
    string phoneNumber = 1;
    string password = 2;
}

message SignedUpUserSettingPwRequest {
    int32 userId = 1;
    string newPassword = 2;
}

message UserUpdateProfileRequest {
    int32 userId = 1;
    string firstName = 2;
    string lastName = 3;
    string email = 4;
    string address = 5;
    string pincode = 6;
}
    

message SignedUpUserSettingPwResponse {
    string token = 1;
}

//Login
message UserLoginGetOTPRequest {
    string phoneNumber = 1;
}

message UserLoginGetOTPResponse {
    string message = 1;
}

message UserLoginVerifyOTPRequest {
    string phoneNumber = 1;
    string otp = 2;
}

message UserLoginResponse {
    string message = 1;
    string token = 2;
    LoggingUserDetails userDetails = 3;
}
message LoggingUserDetails {
    int32 id = 1;
    string firstName = 2;
    string lastName = 3;
    string phoneNumber = 4;
}
// Sign up
message UserSignUpGetOTPRequest {
    string phoneNumber = 1;
}

message UserSignUpGetOTPResponse {
    string message = 1;
}

message UserSignUpVerifyOTPRequest {
    string phoneNumber = 1;
    string otp = 2;
}

message UserSignUpVerifyOTPResponse {
    string message = 1;
    string token = 2;
    SignedUpUserDetails userDetails = 3;
}
message SignedUpUserDetails {
    int32 id = 1;
    string phoneNumber = 4;
}
message UserGetOTPForPwChangeRequest {
    int32 userId = 1;
}
message UserGetOTPForPwChangeResponse {
    string last4Digits = 1;
}

message UserVerifyOTPForPwChangeRequest {
    int32 userId = 1;
    string otp = 2;
}

message UserVerifyOTPForPwChangeResponse {
    string tempToken = 1;
}


message UserVerifyOTPForPwChangeResponse2 {
    string tempToken = 1;
}